# lib/db/src/schema/index.ts
@@ -2,3 +2,4 @@ export * from "./patients";
 export * from "./professionals";
 export * from "./sessions";
 export * from "./goals";
+export * from "./goal-library";
